cmss/e-forms/objects/Document_Configuration__mdt/fields/Biometric_Signature__c.field-meta.xml
<CustomField>
    <fullName>Biometric_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biometric Signature</label>
    <type>Checkbox</type>
</CustomField>