cmss/e-forms/objects/Document_Configuration__mdt/fields/Disable_Storing_To_JSK__c.field-meta.xml
<CustomField>
    <fullName>Disable_Storing_To_JSK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Storing To JSK</label>
    <type>Checkbox</type>
</CustomField>