cmss/e-forms/objects/Document_Configuration__mdt/fields/Fill_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Fill_Barcode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fill Barcode</label>
    <type>Checkbox</type>
</CustomField>