cmss/e-forms/objects/Document_Configuration__mdt/fields/Label_CZ__c.field-meta.xml
<CustomField>
    <fullName>Label_CZ__c</fullName>
    <label>Label CZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>