cmss/e-forms/objects/Document_Configuration__mdt/fields/Label_EN__c.field-meta.xml
<CustomField>
    <fullName>Label_EN__c</fullName>
    <label>Label EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>