cmss/e-forms/objects/Document_Configuration__mdt/fields/Message_Before_Print__c.field-meta.xml
<CustomField>
    <fullName>Message_Before_Print__c</fullName>
    <label>Message Before Print</label>
    <length>255</length>
    <type>Text</type>
</CustomField>