cmss/e-forms/objects/Document_Configuration__mdt/fields/Open_In_New_Window__c.field-meta.xml
<CustomField>
    <fullName>Open_In_New_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open In New Window</label>
    <type>Checkbox</type>
</CustomField>