cmss/e-forms/objects/Document_Configuration__mdt/fields/Pre_contract_document__c.field-meta.xml
<CustomField>
    <fullName>Pre_contract_document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-contract document</label>
    <type>Checkbox</type>
</CustomField>