cmss/e-forms/objects/Document_Configuration__mdt/fields/Template_Header_Note__c.field-meta.xml
<CustomField>
    <fullName>Template_Header_Note__c</fullName>
    <description>The note appears in a rectangle in the template header. The text is centered. It is possible to insert a string &lt;br/&gt; into the text to jump to a new line. The height and width of the text is limited. Checks the appearance of the pdf when changing the parameter.</description>
    <inlineHelpText>The note appears in a rectangle in the template header. The text is centered. It is possible to insert a string &lt;br/&gt; into the text to jump to a new line. The height and width of the text is limited. Checks the appearance of the pdf when changing the parameter</inlineHelpText>
    <label>Template Header Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>