cmss/e-forms/objects/Document_Configuration__mdt/listViews/PPF.listView-meta.xml
<ListView>
    <fullName>PPF</fullName>
    <columns>MasterLabel</columns>
    <columns>Data_ID__c</columns>
    <columns>Migration_Process__c</columns>
    <columns>Label_CZ__c</columns>
    <columns>Order__c</columns>
    <columns>Disable_Storing_To_JSK__c</columns>
    <columns>Message_Before_Print__c</columns>
    <columns>URL__c</columns>
    <columns>Pre_contract_document__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Migration_Process__c</field>
        <operation>equals</operation>
        <value>Migrace účtu</value>
    </filters>
    <label>PPF</label>
    <language>en_US</language>
</ListView>