cmss/e-forms/objects/Document_Configuration__mdt/listViews/Premium.listView-meta.xml
<ListView>
    <fullName>Premium</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Data_ID__c</columns>
    <columns>Migration_Process__c</columns>
    <columns>Label_CZ__c</columns>
    <columns>Order__c</columns>
    <columns>Disable_Storing_To_JSK__c</columns>
    <columns>Message_Before_Print__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Migration_Process__c</field>
        <operation>equals</operation>
        <value>Premium</value>
    </filters>
    <label>Premium</label>
    <language>en_US</language>
</ListView>